Add comprehensive modules.md document with 47 examples
Co-authored-by: janbodnar <16985640+janbodnar@users.noreply.github.com>